cluster/apps/homelab-hub/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homelab-hub
  namespace: homelab-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homelab-hub
  template:
    metadata:
      labels:
        app: homelab-hub
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-05-06T14:00:00Z"  
    spec:
      serviceAccountName: homelab-hub
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k8s-worker2
      containers:
        - name: homelab-hub
          image: jaysuzi5/homelab-hub:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
